2016-09-01  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt: disable C++11 support for clang compiler to
	avoid CI fails.

2016-08-31  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine_Test.cpp (my_test): fake unit test.
	* CI/script.sh: add `make check` to travis-ci.
	* CMakeLists.txt (BUILD_UNITTESTS): search for Boost.Test only if
	needed.
	* CMakeLists.txt (BUILD_UNITTESTS): add the unit tests option.

	* ROADMAP: add Unit tests section.

2016-08-18  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt: replace GLOB with hardcoded filenames for all other
	targets.

	* CMakeLists.txt (logger-src): replace GLOB with hardcoded filenames.
	* src/server/tools/server_ctl/CommandLine.cpp (getNext): remove
	trim to fix CI fail.

	* DEPENDENCIES (Enet): add full section from CI/before_install.sh.
	* DEPENDENCIES (readline): add homepage and download sections.
	* src/server/tools/server_ctl/CommandLine.cpp: remove iostream include
	trying to fix the ci build.
	* DEPENDENCIES (Boost): add homepage and download sections.
	* DEPENDENCIES (Guile): add full section from CI/before_install.sh.
	* DEPENDENCIES (Boost): add some needed components (System, FileSystem,
	Graph, Test).

2016-08-04  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt: make CMAKE_CXX_FLAGS also remove src/ from the
	filename.
	* server/ : move remaining files to OLD/service.
	* server/ : remove autotools files.

	* CMakeLists.txt: now search for Readline.
	* CMakeLists.txt: add setting for CMAKE_MODULE_PATH.
	* cmake/FindReadline.cmake: add a cmake script used to search for
	readlien library.
	* src/server/tools/server_ctl/CommandLine.cpp (prompt); replace
	PACKAGE_VERSION macro with VERSION because of the cmake-based
	config.h.
	* src/server/tools/server_ctl/CommandLine.cpp: remove conditionnal
	include of config.h.
	* CMakeLists.txt (rainbrurpg-server-ctl): added rule for new executable.

2016-07-29  Jérôme Pasquier  <rainbru@free.fr>
